--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "netlify-identity-widget": "^1.9.2",
     "vue": "^3.5.12"
   },
   "devDependencies": {
+    "@types/netlify-identity-widget": "^1.9.6",
     "@vitejs/plugin-vue": "^5.1.4",
     "typescript": "~5.6.3",
     "vite": "^5.4.10",
