--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^11.1.0",
     "netlify-identity-widget": "^1.9.2",
     "vue": "^3.5.12"
   },
